# compas_mrr

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  changelog.html  conf.py  contributing.html  environment.yml  flake.nix  genindex.html  index.html  index.rst  installation.html  license.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  reference.html  search.html  searchindex.js  setup.cfg  setup.py  tasks.py  usage.html
.doctrees/: changelog.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  license.doctree  reference.doctree  usage.doctree
.doctrees/reference/: compas_mrr.arbitrary_pts_localization.doctree  compas_mrr.doctree  compas_mrr.measurement_point.doctree  compas_mrr.three_pts_localization.doctree  compas_mrr.utils.doctree  compas_mrr.xforms.doctree
.github/workflows/: test-ironpython.yml  test-publish-release.yml  todo.yaml  workflow.yml
_modules/: compas_mrr.html  index.html
_modules/compas_mrr/: arbitrary_pts_localization.html  measurement_point.html  three_pts_localization.html  utils.html  xforms.html
_sources/: license.rst.txt  reference.rst.txt
_sources/reference/: compas_mrr.arbitrary_pts_localization.rst.txt  compas_mrr.measurement_point.rst.txt  compas_mrr.rst.txt  compas_mrr.three_pts_localization.rst.txt  compas_mrr.utils.rst.txt  compas_mrr.xforms.rst.txt
_static/: documentation_options.js
compas_mobile_robot_reloc/: __init__.py  arbitrary_pts_localization.py  three_pts_localization.py  utils.py  xforms.py
compas_mrr/: __main__.py  arbitrary_pts_localization.py  measurement_point.py  three_pts_localization.py
docs/: conf.py  index.rst  installation.rst  reference.rst
docs/reference/: index.rst
grasshopper/: rcs_frames.json  robot_localization.ghx  wcs_frames.csv
reference/: compas_mobile_robot_reloc.arbitrary_pts_localization.rst  compas_mobile_robot_reloc.measurement_point.rst  compas_mobile_robot_reloc.rst  compas_mobile_robot_reloc.three_pts_localization.rst  compas_mobile_robot_reloc.utils.rst  compas_mobile_robot_reloc.xforms.rst  compas_mrr.arbitrary_pts_localization.html  compas_mrr.html  compas_mrr.measurement_point.html  compas_mrr.three_pts_localization.html  compas_mrr.utils.html  compas_mrr.xforms.html
src/compas_mobile_robot_reloc/: __init__.py  __main__.py  arbitrary_pts_localization.py  measurement_point.py  three_pts_localization.py  utils.py  xforms.py
src/compas_mrr/: __init__.py  utils.py  xforms.py
tests/: ipy_test_runner.py  test_arbitrary_pts_localization.py  test_import.py  test_measurement_point.py  test_nothing.py  test_proxy.py  test_three_pts_localization.py  test_utils.py  test_xforms.py
total_station_robot_localization/: __init__.py  arbitrary_pts_localization.py  three_pts_localization.py  utils.py  xforms.py
