[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "compas_mrr"
authors = [{name = "Anton Tetov", email = "anton@tetov.se"}]
description = "COMPAS Mobile Robot Reloc: Robot localization using external measuring device (total station)."
dynamic = ["version"]
requires-python = ">=3.8"
keywords = ["architecture", "engineering", "fabrication", "construction"]
license = {text = "MIT"}
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Unix",
  "Operating System :: POSIX",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python",
  "Programming Language :: Python :: 2",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: IronPython",
]
dependencies = ["compas<3"]
urls = {repository = "https://github.com/gramaziokohler/compas_mrr", documentation = "https://gramaziokohler.github.io/compas_mrr"}

[project.optional-dependencies]
dev = [
  "m2r2",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "ruff",
  "sphinx",
  "sphinx_compas_theme<1",
]

[tool.setuptools_scm]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --doctest-modules --doctest-glob=*.rst --tb=short"

doctest_optionflags= "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ALLOW_UNICODE ALLOW_BYTES"
