[metadata]
name = compas_mobile_robot_reloc
description = Robot localization using external measuring device (total station).
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
url = https://gramaziokohler.github.io/compas_mobile_robot_reloc
project_urls =
    Repository = https://github.com/gramaziokohler/compas_mobile_robot_reloc
    Issues = https://github.com/gramaziokohler/compas_mobile_robot_reloc/issues
    Documentation = https://gramaziokohler.github.io/compas_mobile_robot_reloc
author = Gramazio Kohler Research
maintainer = Anton Tetov Johansson
maintainer_email = anton@tetov.se


keywords = architecture, engineering, fabrication, construction
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Scientific/Engineering
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: IronPython
license = MIT license
license_file = LICENSE

[options]
package_dir =
    =src
packages=find:
zip_safe = False
include_package_data = True
install_requires =
    compas >= 0.19.3, <1.0
python_requires = >=3.7
[options.package_data]
* = py.typed

[options.packages.find]
where=src

[options.extras_require]
dev =
    black >= 20.8b1
    doc8
    flake8
    invoke >= 1.4.1
    isort >= 5.6.4
    mypy >= 0.790
    pydocstyle
    pytest >= 3.2
    recommonmark >=0.6
    Rhino-Stubs
    sphinx >=1.6
    sphinx_compas_theme >= 0.4
    setuptools_scm[toml] >= 4.1.2



[bdist_wheel]
universal = 1

[flake8]
max-line-length = 88
extend-ignore = E203

[doc8]
max-line-length = 88
ignore = D001

[pydocstyle]
convention = numpy
add-ignore = D105,D202

[yapf]
COLUMN_LIMIT = 88

[tool:pytest]
testpaths = tests

python_files =
    test_*.py
    *_test.py
    tests.py

addopts =
    -ra
    --strict
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short

doctest_optionflags= NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ALLOW_UNICODE ALLOW_BYTES
