[metadata]
name = compas_mobile_robot_reloc
description = Robot localization using external measuring device (total station).
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
url = https://gramaziokohler.github.io/compas_mobile_robot_reloc
project_urls =
    Repository = https://github.com/gramaziokohler/compas_mobile_robot_reloc
    Issues = https://github.com/gramaziokohler/compas_mobile_robot_reloc/issues
    Documentation = https://gramaziokohler.github.io/compas_mobile_robot_reloc
author = Gramazio Kohler Research
maintainer = Anton Tetov Johansson
maintainer_email = anton@tetov.se


keywords = architecture, engineering, fabrication, construction
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Scientific/Engineering
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: IronPython
license = MIT license
license_file = LICENSE

[options]
package_dir =
    =src
packages=find:
zip_safe = False
include_package_data = True
install_requires =
    compas >= 0.17.2, < 1.14
python_requires = >=3.7

[options.package_data]
* = py.typed

[options.packages.find]
where=src

[options.extras_require]
dev =
    black >= 20.8b1
    doc8
    flake8
    importlib_metadata;python_version<'3.8'
    invoke >= 1.5,< 1.7
    isort >= 5.6.4
    m2r2 ~= 0.2
    mypy >= 0.790
    pre-commit
    pydocstyle >= 5.1,< 7.0
    pytest >= 6.1,< 8.0
    pytest-cov
    sphinx >= 3.3
    sphinx_compas_theme ~= 0.11
    setuptools_scm[toml] >= 4.1,< 7.0

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 88
extend-ignore = E203

[doc8]
max-line-length = 88
ignore = D001

[pydocstyle]
convention = numpy
add-ignore = D105,D202
match = src/.*\.py

[yapf]
COLUMN_LIMIT = 88

[tool:pytest]
testpaths = tests

python_files =
    test_*.py
    *_test.py
    tests.py

addopts =
    -ra
    --strict-markers
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short

doctest_optionflags= NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ALLOW_UNICODE ALLOW_BYTES
